# Data-Structures-and-Algorithms-in-C

./: README.md
array/basic/: CMakeLists.txt
array/basic/include/: array.h  functions.h
array/basic/src/: CMakeLists.txt  main.c
array/basic/src/lib/: CMakeLists.txt  functions.c
linkedlist/circular/: build.sh
linkedlist/circular-double/: CMakeLists.txt
linkedlist/circular-double/include/: functions.h
linkedlist/circular-double/src/: main.c
linkedlist/circular-double/src/lib/: functions.c
linkedlist/circular/include/: functions.h
linkedlist/circular/src/lib/: functions.c
linkedlist/double/include/: linkedlist.h
linkedlist/double/src/: main.c
linkedlist/double/src/lib/: functions.c
linkedlist/include/: functions.h  linkedlist.h
linkedlist/single/: CMakeLists.txt
linkedlist/single/include/: functions.h  linkedlist.h
linkedlist/single/src/: main.c
linkedlist/single/src/lib/: functions.c
linkedlist/src/: main.c
linkedlist/src/lib/: functions.c
